--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,8 +4,9 @@
     </head>
     
     <body>
-        <h1>Express</h1>
+        <h1>{{title}}</h1>
         
+        <p>You are running in <b>{{env}}</b> mode. </p>
         
     </body>
     
