hooked up a basic stack dump for dev mode

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -6,8 +6,9 @@
     <body>
         <h1>Error</h1>
         
-        I died!
+        I died because you tried to use a function inside of me!
         
+        {{app.get('env')}}
         
     </body>
     
