--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,6 +8,11 @@
         
         <p>You are running in <b>{{env}}</b> mode. </p>
         
+        <p>
+            <h2>Funky stuff</h2>
+            The result of some func: {{func}}
+        </p>
+        
     </body>
     
 </html>
