added config info

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,6 +11,11 @@
         <p>
             <h2>Funky stuff</h2>
             The result of some func: {{func}}
+            
+        </p>
+        
+        <p>
+             The config val is: {{myVal}}
         </p>
         
     </body>
