added a link to see stylus working

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,6 +18,8 @@
              The config val is: {{myVal}}
         </p>
         
+        <a href="https://github.com/groksrc/">Find me on GitHub</a>
+        
     </body>
     
 </html>
